--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,4 +14,42 @@
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
+
+  <ion-button shape="round" fill="outline" color="primary" (click)="presentModal()">
+    <ion-icon slot="start" name="star" color="primary"></ion-icon>
+    Modal by Controller
+  </ion-button>
+
+  <ion-button shape="round" fill="outline" color="secondary" id="open-modal">
+    <ion-icon slot="start" name="star-outline" color="secondary"></ion-icon>
+    Modal by Trigger
+  </ion-button>
+
+  <ion-button fill="outline" color="tertiary" expand="block" (click)="presentToast('top')">Present Toast At the Top</ion-button>
+  <ion-button fill="outline" color="tertiary" expand="block" (click)="presentToast('middle')">Present Toast At the Middle</ion-button>
+  <ion-button fill="outline" color="tertiary" expand="block" (click)="presentToast('bottom')">Present Toast At the Bottom</ion-button>
+
+  <ion-text>{{ message }}</ion-text>
+
+  <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-button color="secondary" (click)="cancel()">Cancel</ion-button>
+          </ion-buttons>
+          <ion-title>Welcome</ion-title>
+          <ion-buttons slot="end">
+            <ion-button color="secondary" (click)="confirm()" [strong]="true">Confirm</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-item>
+          <ion-label position="stacked">Enter your name</ion-label>
+          <ion-input color="secondary" type="text" placeholder="Your name" [(ngModel)]="name"></ion-input>
+        </ion-item>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
